--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
         <nav class="nav " id="nav">
             <ul class="menu">
                 <li class="menu__item">
-                    <a href="" class="menu__link">Home</a>
+                    <a href="#" class="menu__link">Home</a>
                 </li>
                 <li class="menu__item">
-                    <a href="" class="menu__link">New</a>
+                    <a href="#" class="menu__link">New</a>
                 </li>
                 <li class="menu__item">
-                    <a href="" class="menu__link">Popular</a>
+                    <a href="#" class="menu__link">Popular</a>
                 </li>
                 <li class="menu__item">
-                    <a href="" class="menu__link">Trending</a>
+                    <a href="#" class="menu__link">Trending</a>
                 </li>
                 <li class="menu__item">
-                    <a href="" class="menu__link">Categories</a>
+                    <a href="#" class="menu__link">Categories</a>
                 </li>
             </ul>
         </nav>
@@ -55,7 +55,7 @@
         </h1>
         <p class="text__description">We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
         But is it really fulfilling its promise?</p>
-        <a href="" class="link__button">Read more</a>
+        <a href="#" class="link__button">Read more</a>
         <section class="newest">
           <h2 class="text__title text__title--orange">New</h2>
            <article class="new">
